Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-2446

Raw data dumps don't backslash quote quotemarks!

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • proton-c-0.36.0
    • proton-c
    • None

    Description

      If you want to put (or paste) dumped raw data into strings then having unquoted quotemarks is very inconvenient and makes you have to manually fix up the string.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: