PROTON-2446: escape quotemarks when they appear in dumped data