c/src/core/util.c
@@ -40,8 +40,8 @@ ssize_t pn_quote_data(char *dst, size_t capacity, const char *src, size_t size)
   for (unsigned i = 0; i < size; i++)
   {
     uint8_t c = src[i];
-    // output printable ASCII, ensure '\' always introduces hex escape
-    if (c < 128 && c != '\\' && isprint(c)) {
+    // output printable ASCII, ensure '\' always introduces hex escape, escape quote marks
+    if (c < 128 && c != '\\' && c != '\"' && c != '\'' && isprint(c)) {
       if (idx < (int) (capacity - 1)) {
         dst[idx++] = c;
       } else {
